ajustes de interface

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                     <span></span>
 
-                    <span></span> Entre em contato!
+                    <span></span> Entre em contato com o desenvolvedor!
 
                 </a>
 
@@ -272,7 +272,7 @@
                         </button>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body"><a href="discord.com.br">Thay#1643</a></div>
+                        <div class="accordion-body text-center bg-dark text-light"><a style="color:#fff" href="discord.com.br">Thay#1643</a></div>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -286,7 +286,7 @@
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body"><a href="mailto:thayronelsilva47@gmail.com">thayronelsilva47@gmail.com</a></div>
+                        <div class="accordion-body text-center bg-dark text-light"><a style="color:#fff" href="mailto:thayronelsilva47@gmail.com">thayronelsilva47@gmail.com</a></div>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -301,7 +301,7 @@
                         </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body"><a href="https://github.com/Thayrone-L">Thayrone-L</a></div>
+                        <div class="accordion-body text-center bg-dark text-light"><a style="color:#fff" href="https://github.com/Thayrone-L">Thayrone-L</a></div>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -316,7 +316,7 @@
                         </button>
                     </h2>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body"><a href="https://api.whatsapp.com/send?phone=5511947791745&text=Olá">+55 11 947791745</a></div>
+                        <div class="accordion-body text-center bg-dark text-light"><a style="color:#fff" href="https://api.whatsapp.com/send?phone=5511947791745&text=Olá">+55 11 947791745</a></div>
                     </div>
                 </div>
             </div>
