Criação da miniatura

--- a/index.html
+++ b/index.html
@@ -36,9 +36,19 @@
             <div class="col ">
                 <div class="card text-white meubg text-center" id="card_principal">
                     <div class="card-header">
+                        <div class="row justify-content-between">
+                            <div class="col-4">
 
-                        <img src="https://cdn.discordapp.com/icons/894951928423936020/b2284ed8e0ffecb725e67a2c2e2efe22.webp?size=96" alt="" width="90" height="90" id="img-logo" />
-                        <h5 class="card-title">Contador de energias</h5>
+                            </div>
+                            <div class="col-4">
+                                <img src="https://cdn.discordapp.com/icons/894951928423936020/b2284ed8e0ffecb725e67a2c2e2efe22.webp?size=96" alt="" width="90" height="90" id="img-logo" />Contador de energias
+                            </div>
+                            <div class="col-4">
+                                <a href="#" class="btn btn-sm animated-button thar-three" onclick="miniatura()"><img src="https://img.icons8.com/ios-filled/50/ffffff/enter-pin.png" /></a>
+                            </div>
+                        </div>
+
+
 
 
                     </div>
